cabal-version:   3.16
name:            p10958
version:         0.1.0.0
license:         NONE
author:          hd2g
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
    CPP
    TemplateHaskell
    ForeignFunctionInterface
    MagicHash
    UnliftedFFITypes
    TypeOperators
    UnboxedTuples
    PackageImports
    QuasiQuotes
    DeriveAnyClass
    DeriveLift
    StaticPointers
    ImportQualifiedPost

library
    import:           settings
    exposed-modules:
        MyLib
      , Operator
    build-depends:
        base ^>=4.20.2.0
      , megaparsec
      , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable p10958
    import:           settings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        p10958

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite p10958-test
    import:           settings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        p10958
